# spotcheckrl

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: baseline_agent.py  config.py  constants.py  environment.py  graders.py  main.py  models.py  price_model.py  utils.py
scripts/: agent_interface.py
server/: Dockerfile  __init__.py  app.py  spotcheckr1_environment.py
tests/: test_env.py
