# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-spotcheckr1"
version = "0.2.0"
description = "Spotcheckr1 environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.2",
    # Environment-specific dependencies
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m spotcheckr1.server.app
server = "spotcheckr1.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["spotcheckr1", "spotcheckr1.server", "spotcheckr1.app"]
package-dir = { "spotcheckr1" = ".", "spotcheckr1.server" = "server", "spotcheckr1.app" = "app" }